--- a/src/commonStyle.css
+++ b/src/commonStyle.css
@@ -3,3 +3,12 @@
     margin: 0;
     box-sizing: border-box;
 }
+html {
+     height: 100%;
+}
+body {
+    margin:0;
+    padding:0;
+    font-family: Constantia;
+    background: linear-gradient(#141e30, #243b55);
+}
